<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <item
            android:id="@+id/menuInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/menuRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_registration_member"
            android:title="@string/txt_inscripcion" />
        <item
            android:id="@+id/menuLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_team_members"
            android:title="@string/txt_miembros" />
    </group>
</menu>