<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="350dp"
        android:layout_height="48sp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefono"
        app:layout_constraintEnd_toEndOf="@+id/txtTelefono"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Documento"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtDocumento"
        app:layout_constraintEnd_toEndOf="@+id/txtDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/txt_telefono"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/txt_documento"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="@+id/btnEnviar"
        app:layout_constraintStart_toStartOf="@+id/btnEnviar"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/registro"
        android:text="@string/btn_enviar"
        app:icon="@drawable/ic_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDocumento"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="142dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>